CSS/style.css
header {
  color: #272a31;
  background-image: url(/Assets/background-img.jpg);
}

header nav i {
  color: #272a31;
  font-size: 30px;
  padding: 15px;
}

@media (min-width: 768px) {
  header nav {
    align-items: center;
    padding: 10px 10px 5px 10px;
  }
}

header nav a img {
  width: 25%;
}

header nav div a {
  text-decoration: none;
  color: #272a31;
  padding: 15px;
}

.top-section {
  color: #ec5242;
  padding: 5px 15px;
}

.top-section h1 {
  font-size: 20px;
  font-weight: 600;
}

.top-section h2 {
  font-size: 1.5rem;
  font-weight: 400;
  text-transform: uppercase;
  font-family: "cocogoose", sans-serif;
}

.top-mid-section {
  padding: 5px 15px;
}

.top-mid-section p {
  font-size: 0.9rem;
  font-weight: 600;
}

.top-lower-section {
  padding: 5px 15px 15px 15px;
}

.top-lower-section h3 {
  text-transform: uppercase;
  font-size: 1.25rem;
  font-weight: 900;
}

.top-lower-section h4 {
  font-weight: 400;
}

.the-program {
  background-color: #272a31;
  color: #d3d3d3;
  padding: 15px;
}

.the-program h1 {
  text-align: center;
  font-size: 24px;
  font-weight: 400;
}

.the-program p {
  text-align: center;
  padding-top: 5px;
}

.the-program hr {
  color: #ec5242;
  width: 20%;
  height: 2px;
  margin: 5px auto 15px auto;
}

@media (min-width: 768px) {
  .the-program div {
    flex-direction: column;
  }
}

.the-program button {
  background-color: #ec5242;
  display: block;
  width: 70%;
  height: 80px;
  margin: 15px auto;
}

.program-item {
  display: flex;
  align-items: center;
  height: 110px;
  margin: 10px 0;
  padding: 0;
  background-color: rgba(90, 90, 90, 0.226);
}

.program-item i {
  font-size: 20px;
  padding: 0 0 0 15px;
  flex: 1;
}

.program-item h5 {
  color: #ec5242;
  font-size: 10px;
  flex: 2;
}

.program-item p {
  text-align: left;
  font-size: 13px;
  padding-right: 10px;
  flex: 5;
}

.grad-students {
  padding: 15px;
}

.grad-students h1 {
  text-align: center;
  font-size: 24px;
  font-weight: 400;
}

.grad-students hr {
  color: #ec5242;
  width: 20%;
  height: 2px;
  margin: 5px auto 15px auto;
}

.grad-student {
  display: flex;
  align-items: center;
  margin: 5px 0;
}

.grad-student img {
  width: 70px;
  height: 70px;
}

.grad-student-text {
  padding: 10px;
  align-items: flex-start;
  flex-direction: column;
}

.grad-student-text h6 {
  font-size: 16px;
  font-weight: 700;
}

.grad-student-text hr {
  color: #272a31;
  width: 20px;
  margin: 0 auto 5px 0;
}

.grad-student-text p {
  font-size: 12px;
  font-weight: 500;
}

.more-button {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  height: 50px;
  margin: 0 15px 20px 15px;
  border: 1px solid #272a31;
}

.more-button .more-button-link {
  text-decoration: none;
  color: #272a31;
}

.more-button .more-button-link i {
  color: #ec5242;
}

header {
  padding-bottom: 15px;
}

.top-section-about {
  color: #ec5242;
  padding: 5px 15px;
  text-align: center;
}

.top-section-about h1 {
  font-size: 20px;
  font-weight: 600;
}

.top-section-about h2 {
  font-size: 1.5rem;
  font-weight: 400;
  text-transform: uppercase;
  font-family: "cocogoose", sans-serif;
}

.top-mid-section-about {
  text-align: center;
  background-color: white;
  margin: 15px;
  padding: 10px 15px 0 15px;
  border: 1px solid #d3d3d3;
}

.top-mid-section-about p {
  font-size: 13px;
  font-weight: 400;
}

.top-lower-section-about {
  text-align: center;
  padding: 15px;
}

.top-lower-section-about p {
  font-size: 12px;
  font-weight: 400;
}

.top-lower-section-about a {
  color: #272a31;
  font-size: 13px;
  font-weight: 600;
}

.mid-top-section {
  text-align: center;
  padding: 10px 15px 20px 15px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.219);
}

.mid-top-section h1 {
  font-size: 22px;
  font-weight: 500;
}

.mid-top-section hr {
  color: #ec5242;
  width: 10%;
  height: 2px;
  margin: 15px auto;
}

.mid-top-section p {
  font-size: 13px;
  font-weight: 400;
}

.mid-top-section div {
  margin: 15px;
  border: 1px solid #272a31;
}

.mid-top-section div img {
  width: 50%;
}

.mid-lower-section {
  text-align: center;
  padding: 15px 10px 20px 10px;
}

.mid-lower-section h1 {
  font-size: 22px;
  font-weight: 500;
}

.mid-lower-section hr {
  color: #ec5242;
  width: 10%;
  height: 2px;
  margin: 15px auto;
}

.mid-lower-section p {
  font-size: 13px;
  font-weight: 400;
}

.mid-lower-section .div-html-background {
  box-shadow: inset 0 0 0 1000px #ec524280;
  color: white;
  background-image: url(/Assets/img-1.jpg);
  background-position: 50% 50%;
  background-size: contain;
  background-repeat: no-repeat;
  width: 100%;
  height: 0;
  padding-top: 53.75%;
  position: relative;
  margin: 20px 0;
}

.mid-lower-section .div-html-background h1 {
  position: absolute;
  top: 50%;
  width: 100%;
  font-size: 24px;
  font-weight: 900;
}

.mid-lower-section .div-peer-background {
  box-shadow: inset 0 0 0 1000px #ec524280;
  color: white;
  background-image: url(/Assets/img-2.jpg);
  background-position: 50% 50%;
  background-size: contain;
  background-repeat: no-repeat;
  width: 100%;
  height: 0;
  padding-top: 66.66%;
  position: relative;
  margin: 20px 0;
}

.mid-lower-section .div-peer-background h1 {
  position: absolute;
  top: 50%;
  width: 100%;
  font-size: 24px;
  font-weight: 900;
}

@font-face {
  font-family: "Cocogoose";
  src: local("cocogoose"), url("/Fonts/cocogoose/Cocogoose Pro-trial.ttf");
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Lato", sans-serif;
}
/*# sourceMappingURL=style.css.map */

